[gd_scene load_steps=8 format=2]

[ext_resource path="res://characters/character.tscn" type="PackedScene" id=1]
[ext_resource path="res://components/detection_zone.tscn" type="PackedScene" id=2]
[ext_resource path="res://characters/enemies/enemy.gd" type="Script" id=3]
[ext_resource path="res://components/soft_collider.tscn" type="PackedScene" id=4]
[ext_resource path="res://guns/auto_aimer.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 8, 8 )

[sub_resource type="CircleShape2D" id=2]
resource_local_to_scene = true
radius = 128.0

[node name="Enemy" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="CollisionShape" parent="HitBox" index="0"]
shape = SubResource( 1 )

[node name="ImmunityDuration" parent="HitBox" index="1"]
wait_time = 0.001

[node name="HandPivot" parent="." index="3"]
script = ExtResource( 5 )

[node name="DetectionZone" parent="." index="4" instance=ExtResource( 2 )]

[node name="CollisionShape2D" parent="DetectionZone" index="0"]
shape = SubResource( 2 )

[node name="SoftCollider" parent="." index="5" instance=ExtResource( 4 )]

[connection signal="lost" from="DetectionZone" to="." method="_on_DetectionZone_lost"]
[connection signal="saw" from="DetectionZone" to="." method="_on_DetectionZone_saw"]

[editable path="HitBox"]
[editable path="DetectionZone"]
